myteo/test/parser/ast/interpolated_strings/invalid_quotes_escape_error.myte
module test

fun main() {
  `foo\"bar`;
}